@@ -77,6 +77,9 @@ Features
   output by showing the module instead of just ``__repr__``.
   See https://github.com/Pylons/pyramid/pull/1488
 
+- Added ``pyramid.events.subscriber_predicate`` decorator to register a class
+  as a subscriber predicate. See https://github.com/Pylons/pyramid/pull/1546
+
 Bug Fixes
 ---------
 
